# translate-app

./: docker-compose.yml  package-lock.json  package.json  project_desc.md
backend/: .dockerignore  .gitignore  Dockerfile  README.md  download_models.sh  pyproject.toml
backend/src/translator/: app.py
frontend/: Dockerfile  package-lock.json  project_desc.md
frontend/src/: App.js  App.scss
src/: App.css  App.js
