[project]
name = "translator"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mattia Di Gangi"},
]
dependencies = [
    "flask>=3.0.3",
    "sentencepiece>=0.2.0",
    "nltk>=3.8.1",
    "ctranslate2>=4.2.1",
    "flask-cors>=4.0.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start.cmd = "flask run"
start.working_dir = "src/translator"

[tool.pdm.dev-dependencies]
lint = [
    "black>=24.4.2",
]
dev = [
    "pip>=24.0",
]
